--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Tunes of the Week</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
-  <script src="main.js"></script>
+  <script src="./lib/bundle.js"></script>
 </head>
 <body>
   <h1>Welcome to Tunes of the Week!</h1>
