Refactor api call into api_util

--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Tunes of the Week</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" type="text/css" media="screen" href="main.css" />
+  <link rel="stylesheet" type="text/css" media="screen" href="./assets/main.css" />
   <script src="./lib/bundle.js"></script>
 </head>
 <body>
-  <h1>Welcome to Tunes of the Week!</h1>
+  <button class="top-artists">See Top Artists</button>
+  <button class="top-tunes">See Top Tunes</button>
+  <h1 class="home-header">Last Week's Top Artist's in Country Name Here</h1>
+  <div id="svgcontainer"></div>
 </body>
 </html>
