Add hover animation to circles

--- a/index.html
+++ b/index.html
@@ -6,12 +6,20 @@
   <title>Tunes of the Week</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" media="screen" href="./assets/main.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
+    crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css?family=Bangers|Gloria+Hallelujah|Josefin+Sans|Merriweather+Sans|Roboto" rel="stylesheet">
   <script src="./lib/bundle.js"></script>
 </head>
 <body>
   <button class="top-artists">See Top Artists</button>
   <button class="top-tunes">See Top Tunes</button>
-  <h1 class="home-header">Last Week's Top Artist's in Country Name Here</h1>
-  <div id="svgcontainer"></div>
+  <h1 class="home-header">Last Week's Top Artist's in the United States</h1>
+  <div id="container"></div>
+  <svg id="svg-container" height="500" width="1000"></svg>
+  <footer>
+      <a href="https://github.com/Robertfarb"><i class="fab fa-github fa-4x"></i></a>
+      <a href="https://www.linkedin.com/in/robert-farb-613a3751/"><i class="fab fa-linkedin-in fa-4x"></i></a>
+  </footer>
 </body>
 </html>
