Add Force collision

--- a/index.html
+++ b/index.html
@@ -15,7 +15,12 @@
   <button class="top-artists">See Top Artists</button>
   <button class="top-tunes">See Top Tunes</button>
   <h1 class="home-header">Last Week's Top Artist's in the United States</h1>
-  <div id="container"></div>
+  <aside>
+    <form action="">
+      <input class="country-input" placeholder="Input a country..." type="text" />
+    </form>
+    <button>Find Top Tunes</button>
+  </aside>
   <svg id="svg-container" height="500" width="1000"></svg>
   <footer>
       <a href="https://github.com/Robertfarb"><i class="fab fa-github fa-4x"></i></a>
