Add color scheme

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" type="text/css" media="screen" href="./assets/main.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ"
     crossorigin="anonymous">
-  <link href="https://fonts.googleapis.com/css?family=Bangers|Gloria+Hallelujah|Josefin+Sans|Merriweather+Sans|Roboto" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/css?family=Bangers|Gloria+Hallelujah|Josefin+Sans|Merriweather+Sans|Roboto" rel="stylesheet"> -->
+  <link href="https://fonts.googleapis.com/css?family=Archivo:500|Open+Sans:300,700" rel="stylesheet">
   <script src="./lib/bundle.js"></script>
 </head>
 <body>
