Add click functionality to Top Artists Button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <script src="./lib/bundle.js"></script>
 </head>
 <body>
-  <button class="top-artists">See Top Artists</button>
+  <button id="show-top-artists" class="top-artists">See Top Artists</button>
   <button class="top-tunes">See Top Tunes</button>
   <h1 class="home-header">Last Week's Top Artist's in the United States</h1>
   <aside>
