--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 </head>
 <body>
   <button id="show-top-artists" class="top-artists">See Top Artists</button>
-  <button class="top-tunes">See Top Tunes</button>
+  <button id="show-top-tunes" class="top-tunes">See Top Tunes</button>
+  <i class="fas fa-info fa-5x info-modal-icon"></i>
   <h1 class="home-header">Last Week's Top Artist's in the United States</h1>
   <aside>
     <form action="">
@@ -24,7 +25,7 @@
   </aside>
   <svg id="svg-container" height="500" width="1000"></svg>
   <footer>
-      <a href="https://github.com/Robertfarb"><i class="fab fa-github fa-4x"></i></a>
+      <a href="https://github.com/Robertfarb" target="_blank"><i class="fab fa-github fa-4x"></i></a>
       <a href="https://www.linkedin.com/in/robert-farb-613a3751/"><i class="fab fa-linkedin-in fa-4x"></i></a>
   </footer>
 </body>
