Fix requested data bug

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <button id="show-top-artists" class="top-artists">See Top Artists</button>
   <button id="show-top-tunes" class="top-tunes">See Top Tunes</button>
-  <i class="fas fa-info fa-5x info-modal-icon"></i>
+  <i id="info-modal-toggle" class="fas fa-info fa-5x info-modal-icon"></i>
   <h1 class="home-header">Last Week's Top Artist's in the United States</h1>
   <aside>
     <form action="">
@@ -28,5 +28,11 @@
       <a href="https://github.com/Robertfarb" target="_blank"><i class="fab fa-github fa-4x"></i></a>
       <a href="https://www.linkedin.com/in/robert-farb-613a3751/"><i class="fab fa-linkedin-in fa-4x"></i></a>
   </footer>
+  <div id="modal" class="is-open">
+    <div class="modal-info">
+      
+    </div>
+    <div class="modal-close"></div>
+  </div>
 </body>
 </html>
