Add search input event listener

--- a/index.html
+++ b/index.html
@@ -17,13 +17,13 @@
   <button id="show-top-tunes" class="top-tunes">See Top Tunes</button>
   <i id="info-modal-toggle" class="fas fa-info fa-5x info-modal-icon"></i>
   <h1 id="tunes-header" class="home-header">Last Week's Top Artist's in the United States</h1>
-  <aside>
-    <form action="">
-      <input class="country-input" placeholder="Input a country..." type="text" />
-    </form>
-    <button>Find Top Tunes</button>
-  </aside>
   <svg id="svg-container" height="500" width="1000"></svg>
+  <aside>
+    <form id="country-search-form">
+      <input id='country-input' class="country-input" placeholder="Input a country..." type="text" />
+    </form>
+    <input type="submit" value="Find Top Tunes"/>
+  </aside>
   <footer>
       <a href="https://github.com/Robertfarb" target="_blank"><i class="fab fa-github fa-4x"></i></a>
       <a href="https://www.linkedin.com/in/robert-farb-613a3751/"><i class="fab fa-linkedin-in fa-4x"></i></a>
