Add double click to circles

--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
         display top hits and top artist played on Last.fm last week.
         <br><br>
         You can hover over the bubbles to show the song or artist, and see how many
-        listeners they had last week. The bubbles are also interactive so you can drag them around
+        listeners they had last week. You can double click a bubble to view the artist or song page on 
+        Last.fm. The bubbles are also interactive so you can drag them around
         the screen!
       </p>
     </div>
