Add modal open on page load

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
       <a href="https://github.com/Robertfarb" target="_blank"><i class="fab fa-github fa-4x"></i></a>
       <a href="https://www.linkedin.com/in/robert-farb-613a3751/"><i class="fab fa-linkedin-in fa-4x"></i></a>
   </footer>
-  <div id="modal" class="modal">
+  <div id="modal" class="modal is-open">
     <div class="modal-info">
+      <span id="modal-x">&times;</span>
       <h1>Welcome to Tunes of the Week!</h1>
       <p>This is a data visualization using D3.js and the Last.fm API to 
         display top hits and top artist played on Last.fm last week.
