--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <p>This is a data visualization using D3.js and the Last.fm API to 
         display top hits and top artist played on Last.fm last week.
         <br><br>
-        You can hover over the bubbles to show the song or artist, and see how many
+        Hover over the bubbles to see the corresponding song or artist, and see how many
         listeners they had last week. You can double click a bubble to view the artist or song page on 
         Last.fm. The bubbles are also interactive so you can drag them around
         the screen!
